# D1_HIMLoco

./: README.md  README_CN.md
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/d1/: d1.py  d1_config.py
legged_gym/legged_gym/scripts/: play.py  train.py
legged_gym/legged_gym/utils/: __init__.py  helpers.py
legged_gym/resources/robots/d1/: CMakeLists.txt  package.xml
legged_gym/resources/robots/d1/config/: joint_names_d1_description.yaml
legged_gym/resources/robots/d1/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
legged_gym/resources/robots/d1/rviz/: rviz.rviz
legged_gym/resources/robots/d1/urdf/: d1_description.csv  d1_description.urdf  d1_description.xml
rsl_rl/rsl_rl/algorithms/: him_ppo.py
rsl_rl/rsl_rl/runners/: him_on_policy_runner.py  on_policy_runner.py
